--- a/aDVanceERP.Desktop/Properties/Resources.resx
+++ b/aDVanceERP.Desktop/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="accountF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\accountF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bar_chartF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bar_chartF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
