--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/TipoMovimiento/VistaRegistroTipoMovimiento.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/TipoMovimiento/VistaRegistroTipoMovimiento.resx
@@ -123,14 +123,24 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAW9JREFUOE/V
-        079L1lEUx/EXlmZoWUORjmI0uFROLeIgFC3WIP0PCdEgRII/mvsBTi2uRYvgFi4lIeKmtaRBQQSBCelg
-        qKAWB+7z7evNerDtecMZ7rnnfu6555xLrdOK19jA9yr2BWdygZy72MQP9FaxHtTlAjlj+Ijrmb8ZT/AG
-        93Ak2/8rIRhPznmG9xjCKu7nATmdeIAVfMV5PMdJHMUWrqXYQSxm5wsi9QnsYQGvMI8raR1NOoYddKcz
-        t7GU6RSM4hsupXX5yU24iHq8xCxu4hMeljQKLmAbt0q+EJzBANbwE2/RkfzR/RepSX8wnW4u8zTN4Dru
-        oC1dGhd0ZRYJFfSlQkfxKwxjF+9wLvkepSwPsqjr2QhqwAc8LokFV0uFj4EdT9newOkDrKVy8BQmceK3
-        1j6OYyqN0OV887DE3EWXP+c1+h/iGXPp67Xnm/8i6hN/tb9k0dEQiobEMB+K6MxyEqhY/I4RNObBtc8v
-        PJ9YNMiiJ6kAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAATJJREFUOE/V
+        kTtKhFEMhe+glZX1iDDkJLn51UKws3EqG1fgBgQZUCxEBHGsxMpawRW4AxF0A7ZauAa1sVIsJAODY3z8
+        j0oPHLick3xwSUr/RrMAG9NhVj6qY99hZkReMqa+KZ5McFnLvsPUj7xkygcmuI55mXzHd2P+E3Bs8C3B
+        qdvfno0O1AJ2u93xrHRWKM7d/vZsdKYWsIqMaT8L9mLeCFgIrWSm9flOZzJ2jYDGvGyClyzYjl0p0JiX
+        THAyPNCH6SIzvZli7fNCCdC/NzzOqGeUrkzw+uUwZcDvZMCiCZ5N6Th2zYBCq7630G5PxK4R0JUFG6a8
+        G/NUMG+Z4Dal1IrdL2oVgrsstBmLNAdMm/CjCe5NcVPJPit4UNWpyBvIi0K5VzDtVLJyL+fcjpy/rXci
+        54ztuSVAtwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="fieldNombre.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
+        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
+        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
+        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
+        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
+        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
+        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -141,48 +151,15 @@
         oA550ydKMqdZWpM5TdLNfz09DtOKzFFG2erjsAPe6CA46xMjhLcAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="fieldTituloGestionPagos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldTituloEfecto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAhJJREFUOE/V
-        VE+IjVEUfyIk5U8oEaWZEiUrZSEpK8XukY2m1Dfv/u793ffd79xnhPIVGwuRpCZlpVlMkZU1WViwmFnJ
-        RmTJwt/oITrffO/Nm2/em8JCfnXr3HvO79c595x7a7X/EuIQhOZC9PaoEBPdc2JCz6LDxUibzmUtAKG9
-        Hr2dDNbuFOKTEE/L9VGc264+janyBqIjqHYAhoT2XOZxVm09+ytBRebMkUgc7uz/SFC8fSSSrNN95nBX
-        iDtqk1xf+H5L0NlrQnwTb6dCMNu8Hx0OAUNqi8e0EG3xuFrlDUSkOSjEVyF+DljtQLO/ylsQAFZqRv3W
-        aWPWaIxeiTg7LsTjzOFYVaOWeRwQh4dCvBHiZSQeiLe3CpKz45H2crR2r8a2aPYJ8VqI6YzmihBfxpJk
-        1awYrSnujeZm5u2hmaG2ZwohbydnOov7xVV4XNLYSHMjHxlZnhEndB/CybWzmRHf+6WtQd1y2dgTiR+R
-        +FzGLtL5LBJxaBaEPK8vFeJFv66RXFa+lN6GfBByh2YmxG19PTqnXZJmkBH35tTfgxAamzoZirVb6/X6
-        4rFmskVopoR43vKjw1XOPHQ6HBuNDSrQ69OmZLSvIvEkTZONvb6+0CcmxPtKmW+FeFZm1dZG5Umyosqd
-        hzRNVwvxLnM4r6XGptlVDvlx8Yb6rbVS7K7yBuIUuVn/vDzPl1R9/wy/APegPjQn31d4AAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAE1JREFUOE9j
-        YBguoAqKqQbmQzHVwKiBlAOyDKxjYGBYhQPfh2J0cRgG6cUAoHQ2Ewe+CcXo4jBciW4YIUCWl/GBUQMp
-        B1Q3kOrF18ABABGWJVTyBsYfAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="fieldMonto.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAOVJREFUKFN1
-        0DFKBEEQheE1ENQjDAPOzqvX9RrDjgTxCiaairGR0Z5BDIx3T6Ch6AVEMDAwMBRMzERBryAdzDLdrh90
-        UNV/VJPJCgKSmx3V+/+sRWIWA266rtuoPwvu3oh4EfHsxIOIT5nt1t1SJC7E/naYPdi5iPuyGlHoL0W7
-        G+YdwKLZaVmNxOl0OxJvkfbkZocppfW6+aNt200RJwp4FPERyf26WcrnTE2zNcz5WjK8ltWIiPcYcDzM
-        bnYg4qusRnLsxI+IuYiFAr6j9Wd1V8iXEXHlhmupD/X/SiH0e/nV++wXUQUtda5q3kMAAAAASUVORK5C
-        YII=
-</value>
-  </data>
-  <data name="fieldTituloSuma.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAXRJREFUOE/V
-        k7FKxEAURRdRRFFEQRs/wA/wB7aws9beFULmzdzR5A2rdgEttLBTsNBa0HY7LfYPLCwEwWphdRsLrQRF
-        ebtJkMGssVIvXJjcd+cwPEil8q/kDO0wqOGgFtmokA1dOVDTWb3cNagpmcy6HVCDobZ9Ti5n9RmD2gz9
-        wqCOg95n0AmDnhn0FFs6TrNO2mnLHZ+TqwfUB1G0OgVgOMuJaEycfctMOtItBfTzIv0e0IXhDINaDHos
-        cAvAdGlgkiQDzpiqg1r40sZUpVMa6OdF+hGwvqbm2Kr5zLIGyaMonJWZnEsD0x2+Mej9ky+lw6BrBr32
-        OiWBct4IgolNpSYzR1E0InkSBKMyk3NpYL1eG2fQOYMuMjurtqTDlvak1+uUBMor5L+OoXczO6NWpMNW
-        QWbS+RbIRp060JGfF0m6csfPcznodQbdx9C12KilvoauMehBXuxzcgVBMMSWDhl0y4bu+hp0I/tMkmTQ
-        5/xtfQDosTfG8I8cMwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAS5JREFUOE/t
+        j7EuBGEUhUeIioZ4ANHRUlCsSLzCaEQxO/vf75p9AO2WSgmNiH6zr6ChFwnJPoEIlcI2VOQks5P4hTUq
+        Eic5yc09537JTZI/JaAB7Nd0I+ZUcvcecOvuZ99x2e3FnEol8CjefyZ1awFDCCtAV/sy6wLLw/wnwDXg
+        OPLqMK8NHKV/4EeZ2aG7n6dpOh5nsTqdzgRwARzEWSUzWwAegCfgcYTVuW+1WvMx553a7fasmW2EEDa/
+        sjp5ns/E95X0grtvAXt1rBvdxjy9ewoMgEvgGeib2RXwYmbXZnZTztr1y466A3c/iXkC3rn7jmbgNYSw
+        nmXZnGZgMYSwpFk7ZZrV1Y1uY56CbZVLYF4UxVSSJGNmtpum6aSsWbtmszmtjrq60W3M+716A0LhFe8m
+        WM7KAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
