--- a/aDVanceERP.Modulos.Inventario/Properties/Resources.resx
+++ b/aDVanceERP.Modulos.Inventario/Properties/Resources.resx
@@ -118,16 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="move_stockB_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\move_stockB_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="load_cargo_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\load_cargo_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="move_stockG_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\move_stockG_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="transfer_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transfer_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="move_stockR_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\move_stockR_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="move_stock_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\move_stock_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="unload_cargo_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unload_cargo_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
