--- a/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Compra/VistaRegistroCompra.resx
+++ b/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Compra/VistaRegistroCompra.resx
@@ -151,29 +151,6 @@
         oA550ydKMqdZWpM5TdLNfz09DtOKzFFG2erjsAPe6CA46xMjhLcAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="fieldNombreArticulo.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAANdJREFUOE/t
-        lDGKwlAURbMBp9XWVYitWFhMa2fnQmZWIBbuwG7AaVO6AUXLmHtvkhW4BJWX0RCegvmdwhy4xX+8e/gh
-        8KPobQDQ5x/HwBzSNO15XyTpC8Be0jAkJLfW9T674TfJtZ8/wzrW9fNSCGAHYBIY69wLJX2SPJE8B8Y6
-        I+8rkbSStCyKotsktkvy13sqJP1IWtzOAD5IDmo/YJAkSau2v7BOJfA8EE79J9qsth8mfMa/8J7XF5Kc
-        k9wAGDfJ9WGYeU9FnucdkjFJNUycZVnbe16bCxZ15s3h6yHzAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAE1JREFUOE9j
-        YBguoAqKqQbmQzHVwKiBlAOyDKxjYGBYhQPfh2J0cRgG6cUAoHQ2Ewe+CcXo4jBciW4YIUCWl/GBUQMp
-        B1Q3kOrF18ABABGWJVTyBsYfAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="fieldCantidadArticulos.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGdJREFUKFNj
-        YKAr0FBV/q+upjQHxtdUVZkLEkNVhQSGiYaPGqrKy2B8TTXlVSAxVFVIQENVabWGqvJnDTXlNHUVpUwN
-        VeVvIE3o6uBAW0FBQkNVZY2GqvInEFZXUV6hoaEhjK6OtgAALI4qfmoQVTsAAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="fieldTituloTotalCompra.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAftJREFUOE/F
@@ -214,17 +191,29 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="fieldTituloPrecioUnitario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAbBJREFUOE/F
-        lD9rVEEUxd9GRK0kiYUfwGAjaexSJCb+gUBiqu0XFt67vztssd9g/VNYGLXRSrt8mhTpUuYLRBAjRhFF
-        5ZCZ5b3J2/xBMAemeOfcOW/unTu3KC4KZVnecPdHQLe+zGyl1+tdzeNPBPAA+AR8BvaydQBsDwaDK/m+
-        VkSzb2b2tizLyy36tPSqqh7m2jG4+zrww8ye13lgHnhcFEUnfu8r/XrMMUwyU2rAF+BPCGFD3KmGyQx4
-        lmuj0WhKNYu1mxd3oqGZrcnM3Z/qO4Qw6+69lF5Ep34JEw3N7B5wCGwmLrbHT3e/2Yw+QrfbvQR8BVYb
-        ArAkwd1fNoSjHryecwnAa+CjbntMKq1I1k+2q8LnS+1Ti9nUIUIIi2OzKKxKUMETV1XVHHA3Xyl1M3ul
-        PSpTw0xw91vAr7bmdPdlYKff789EqhPTPGw1SwCexKCVOm9md9x9azgcXpOZmb1RnH5Uj2tFNFX/6RU0
-        EPvvvZra3RdyfSLUfzJNr0CQmbt/OLdZQiz4d70YDQTgnQZACOF+HntWqPAvgN8y1uj6F7MxgNsqvoZr
-        rv03/AVP1QDX8C81hQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAE1JREFUOE9j
+        YBguoAqKqQbmQzHVwKiBlAOyDKxjYGBYhQPfh2J0cRgG6cUAoHQ2Ewe+CcXo4jBciW4YIUCWl/GBUQMp
+        B1Q3kOrF18ABABGWJVTyBsYfAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldCantidad.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGdJREFUKFNj
+        YKAr0FBV/q+upjQHxtdUVZkLEkNVhQSGiYaPGqrKy2B8TTXlVSAxVFVIQENVabWGqvJnDTXlNHUVpUwN
+        VeVvIE3o6uBAW0FBQkNVZY2GqvInEFZXUV6hoaEhjK6OtgAALI4qfmoQVTsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="fieldNombreArticulo.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
+        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
+        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
+        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
+        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
+        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
+        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
