--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/Articulo/VistaRegistroArticulo.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/Articulo/VistaRegistroArticulo.resx
@@ -141,16 +141,17 @@
   </data>
   <data name="fieldPrecioCesion.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAghJREFUOE/F
-        VLuKFEEUXV/4wkA0WWPRzFgE3w9YWNfIyE/Q1A/wERisj0RNNDER9huEYVEWdurUYNft2a7bvTKBMIKC
-        qPh2seV0W0tP7cz6CPRABXXOvYdbt27V2Nj/gip2FoJT3uHswOraY71ea1McvypyZ07kgtcqeKOCZ9F6
-        q2LbRVFsjPOGgmYq+KiC2wA2xLpzbjv1XMzJWFuBIrWnVfDFi73a5L3Yfb5rpsqyXMO9Cl7y+M2YFRhl
-        xqOp4J0KSu/MGXK/NFw2c7gSa2VZrmXP2DtWSm5Vw1zsJM3yFJcD93xubnOr1Vof9jxq8xJGGmZijnjB
-        B01xnftCMK3OPlLBVxV8zsVejHPKmZl1KnivzkwMCIVrH64EwXQI9GJeqJilxa654J09p4JvmtiDzbzc
-        mZsqeMXbXiazbH4HyVAZUSR2vwqWvNgHKuiTUzGzzSoZzyJy1zkUuFpwZoICGx64MH/9PrZkT+f3kPO+
-        s8v7J9vqHHuDOWxT06vCYtfuZjXN4UySZKum6Kngsab2fOB5ITwmez3ULEBTXGIQ32bgFhYw7gV3VexD
-        7iszwa0qLsXRAYNhoGk1f10zFWv1/OEehzqT9oFYHwnOXz3U9SsgaJaLvf/HZgE/G/6JL4YfQi64U30Q
-        Sed4HPtbqHqV4poKvtO4+rr+1qwJn5i9bD4/11j7Z/gBtCvdDRcOBlUAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAIISURBVDhPxVS7ihRBFF1f+MJANFlj0cxYBN8PWFjXyMhP0NQP8BEYrI9ETTQxEfYbhGFRFnbq
+        1GDX7dmu270ygTCCgqj4drHldFtLT+3M+gj0QAV1zr2HW7du1djY/4IqdhaCU97h7MDq2mO9XmtTHL8q
+        cmdO5ILXKnijgmfReqti20VRbIzzhoJmKviogtsANsS6c2479VzMyVhbgSK1p1XwxYu92uS92H2+a6bK
+        slzDvQpe8vjNmBUYZcajqeCdCkrvzBlyvzRcNnO4EmtlWa5lz9g7VkpuVcNc7CTN8hSXA/d8bm5zq9Va
+        H/Y8avMSRhpmYo54wQdNcZ37QjCtzj5SwVcVfM7FXoxzypmZdSp4r85MDAiFax+uBMF0CPRiXqiYpcWu
+        ueCdPaeCb5rYg8283JmbKnjF214ms2x+B8lQGVEkdr8KlrzYByrok1Mxs80qGc8ictc5FLhacGaCAhse
+        uDB//T62ZE/n95DzvrPL+yfb6hx7gzlsU9OrwmLX7mY1zeFMkmSrpuip4LGm9nzgeSE8Jns91CxAU1xi
+        EN9m4BYWMO4Fd1XsQ+4rM8GtKi7F0QGDYaBpNX9dMxVr9fzhHoc6k/aBWB8Jzl891PUrIGiWi73/x2YB
+        Pxv+iS+GH0IuuFN9EEnneBz7W6h6leKaCr7TuPq6/tasCZ+YvWw+P9dY+2f4AbQr3Q0XDgZVAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="fieldPrecioCesion.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -165,18 +166,17 @@
   </data>
   <data name="fieldPrecioAdquisicion.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAlBJREFUOE/F
-        VE2IjlEUHv8/KZL8RJRIMclKWVBTFiiWxMLeAtlQfrJQahbCRiGykMWkyML2I/pM333u933vPfe+7rnv
-        zHw0ZWMWDIMMvTqvGfPNnfHNrHjqLN7OeU7PeZ9zblvbv0YvsDiQOseER2xwL1h1OK6ZNnyiNrFFgwnO
-        E64H0neYMOhJP8y7umbF9S2R5/nMQIAn9STLsnnBVHeliWrvcXoDEwa8wZmY0xKFOkKeptV1nvRWJrz3
-        BheKnFWnmVCLOS3hnd7DhC95ns9I09pGNrjFhNcA5mRW72fCx5jTEqKsUJio9mDUbmnGpCvy77zBJU+q
-        HHOmhPw/Nuh2rrKyv1xeIGq9RYcnDAWDI3H9lOij7hVMeMGET0x4yYQ6E4aZcDmunTbEbTZqb7A4Hwgn
-        MlfZMppjxjK26iYTXjHpQ+OZhXvoYFLPxVEmvPGkn3lSdwtSEbiSmeqOolmidzKhnwlJMOoqE77KEYw1
-        IxwbGec2G7XPkz7IpM9Ko2DRJcFWP2XCt2B1p9QGwo1GozSfrToq386VlzYpw4/JZEtRMGq9BNfV9kD4
-        6Q2GpFZMGjnLYU84OUJwc5nQFwjX4mZyIUz4LOszFmowc9XNoiwQ7oth3qkDf0iigC0ej5u/CVyvrx5V
-        KLspe9jrsLZw3IJl6WPOBDjnFkmDniRZHj8CYoonvGVSKk2xqjk3KUbPavyYGPh9KcUefhej3gELY+4E
-        NGq1JUz4wKQvyqjyKMjZyRsYCMfZqFPBVbbFvL8iS7rXsMGDUqk0O879N/wCKvIQm9hcgM0AAAAASUVO
-        RK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAIISURBVDhPxVS7ihRBFF1f+MJANFlj0cxYBN8PWFjXyMhP0NQP8BEYrI9ETTQxEfYbhGFRFnbq
+        1GDX7dmu270ygTCCgqj4drHldFtLT+3M+gj0QAV1zr2HW7du1djY/4IqdhaCU97h7MDq2mO9XmtTHL8q
+        cmdO5ILXKnijgmfReqti20VRbIzzhoJmKviogtsANsS6c2479VzMyVhbgSK1p1XwxYu92uS92H2+a6bK
+        slzDvQpe8vjNmBUYZcajqeCdCkrvzBlyvzRcNnO4EmtlWa5lz9g7VkpuVcNc7CTN8hSXA/d8bm5zq9Va
+        H/Y8avMSRhpmYo54wQdNcZ37QjCtzj5SwVcVfM7FXoxzypmZdSp4r85MDAiFax+uBMF0CPRiXqiYpcWu
+        ueCdPaeCb5rYg8283JmbKnjF214ms2x+B8lQGVEkdr8KlrzYByrok1Mxs80qGc8ictc5FLhacGaCAhse
+        uDB//T62ZE/n95DzvrPL+yfb6hx7gzlsU9OrwmLX7mY1zeFMkmSrpuip4LGm9nzgeSE8Jns91CxAU1xi
+        EN9m4BYWMO4Fd1XsQ+4rM8GtKi7F0QGDYaBpNX9dMxVr9fzhHoc6k/aBWB8Jzl891PUrIGiWi73/x2YB
+        Pxv+iS+GH0IuuFN9EEnneBz7W6h6leKaCr7TuPq6/tasCZ+YvWw+P9dY+2f4AbQr3Q0XDgZVAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="fieldPrecioAdquisicion.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
